<?xml version="1.0" encoding="utf-8"?>

<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">
    <LinearLayout android:layout_width="match_parent"
                  android:background="@color/title_color"
                  android:orientation="horizontal"
                  android:layout_height="96px">
        <ImageView android:layout_width="wrap_content"
                   android:src="@drawable/btn_return"
                   android:layout_marginLeft="30px"
                   android:layout_gravity="center"
                   android:id="@+id/btn_return"
                   android:layout_height="wrap_content"/>
        <TextView android:layout_width="wrap_content"
                  android:layout_gravity="center"
                  android:layout_marginLeft="20px"
                  android:text="@string/regist"
                  android:textColor="@color/white"
                  android:textSize="26px"
                  android:layout_height="wrap_content"/>
    </LinearLayout>
    <LinearLayout android:layout_width="match_parent"
                  android:background="@color/white"
                  android:orientation="vertical"
                  android:layout_marginTop="30px"
                  android:layout_height="wrap_content">
        <EditText style="@style/commonEdit"
                  android:id="@+id/et_cellphone"
                  android:hint="@string/cellphone_number"/>
        <ImageView style="@style/divideLine"/>
        <EditText style="@style/commonEdit"
                  android:id="@+id/et_password"
                  android:password="true"
                  android:hint="@string/password"/>
        <ImageView style="@style/divideLine"/>
        <TextView style="@style/commonChoiceText"
                  android:text="@string/school"
                  android:id="@+id/tx_school_choice"/>
        <ImageView style="@style/divideLine"/>
        <TextView style="@style/commonChoiceText"
                  android:id="@+id/tx_building_choice"
                  android:text="@string/building_num"/>
        <ImageView style="@style/divideLine"/>
        <EditText style="@style/commonEdit"
                  android:id="@+id/et_room"
                  android:hint="@string/room_num"/>
    </LinearLayout>

    <com.shanlihou.tmp.MyButton
            style="@style/loginButton"
            android:layout_marginTop="40px"
            android:id="@+id/bt_register"
            />

</LinearLayout>